--- a/mse/templates/mse/index.html
+++ b/mse/templates/mse/index.html
@@ -1,7 +1,7 @@
 <head>
 <title>Available Securities: MSE</title>
 </head>
-
+{% include "homedata/login_bar.html" %}
 {% if ticker_list %}
    <ul>
        {% for trade in ticker_list %}
