--- a/homedata/static/homedata/login_bar.css
+++ b/homedata/static/homedata/login_bar.css
@@ -3,7 +3,7 @@ header {
   width: 100%;
   color: #FFFFFF;
   background-color: #000000;
-  text-align: right;
+  /*text-align: right;*/
   padding:10px 0px 0px 0px;
 }
 
