--- a/mse/static/mse/highcharts.css
+++ b/mse/static/mse/highcharts.css
@@ -23,6 +23,10 @@
   stroke-width: 0;
 }
 
+.highcharts-point {
+  stroke-width: 2px;
+}
+
 .highcharts-background {
   fill: #ffffff;
 }
@@ -261,7 +265,7 @@ g.highcharts-series, .highcharts-point {
 }
 
 .highcharts-halo {
-  fill-opacity: 0.25;
+  fill-opacity: 0;
   stroke-width: 0;
 }
 
@@ -425,8 +429,8 @@ g.highcharts-series, .highcharts-point {
 
 .highcharts-plot-line {
   fill: none;
-  stroke: #999999;
-  stroke-width: 1px;
+  stroke: #888888;
+  stroke-width: 2px;
 }
 
 /* Highcharts More */
@@ -440,6 +444,7 @@ g.highcharts-series, .highcharts-point {
 
 .highcharts-bubble-series .highcharts-point {
   fill-opacity: 0.5;
+  stroke-width: 2;
 }
 
 .highcharts-errorbar-series .highcharts-point {
