--- a/mse/templates/mse/chart.html
+++ b/mse/templates/mse/chart.html
@@ -10,10 +10,11 @@
 <script src="http://code.highcharts.com/js/highcharts.js" type="text/javascript"></script>
 <link rel="stylesheet" href="{% static 'mse/highcharts.css' %}" type="text/css">
 {% load chartit %}
-{{ charts|load_charts:"high_low_close,trades_chart,change_chart" }}
+{{ charts|load_charts:"high_low_close,trades_chart,change_chart,volume_chart" }}
 </head>
 <body>
 <div id="high_low_close"></div>
-<div id="trades_chart"></div>
 <div id="change_chart"></div>
+<div id="volume_chart"></div>
+<div id="trades_chart"></div>
 </body>
