--- a/homedata/templates/homedata/login_bar.html
+++ b/homedata/templates/homedata/login_bar.html
@@ -1,7 +1,11 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'homedata/login_bar.css' %}">
 <header>
-<span style="float:left"><a href="/">Home</a></span>
+<span style="float:left"><a href="/">>> Home </a>
+{% for text, hrefs in links %}
+<a href="http://django.hydra.to{{hrefs}}">>> {{text}}</a>
+{% endfor %}
+</span>
 <span style="float:right">
 {% if user.is_authenticated %}
 Logged in as: {{user.username}} (<a href="{% url 'account' %}">Account</a> | <a href="{% url 'logout' %}?next={{request.path}}">Logout</a>)
