Case insensitive urls and moved loginbar to its own app

--- a/mse/templates/mse/details.html
+++ b/mse/templates/mse/details.html
@@ -4,7 +4,7 @@
 <title>{{ requested_ticker }} details</title>
 <link rel="stylesheet" type="text/css" href="{% static 'mse/style.css' %}">
 </head>
-{% include "homedata/login_bar.html" %}
+{% include "loginbar/login_bar.html" %}
 <body>
 {% load l10n %}
 {% load humanize %}
