--- a/mse/templates/mse/chart.html
+++ b/mse/templates/mse/chart.html
@@ -3,7 +3,7 @@
 <!-- code to include the highcharts and jQuery libraries goes here -->
 <!-- load_charts filter takes a comma-separated list of id's where -->
 <!-- the charts need to be rendered to                             -->
-{% include 'homedata/login_bar.html' %}
+{% include 'loginbar/login_bar.html' %}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'mse/style.css' %}">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
