Added Home mapping condition and enabled the enable function to get_links

--- a/loginbar/templates/loginbar/login_bar.html
+++ b/loginbar/templates/loginbar/login_bar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'homedata/login_bar.css' %}">
 <header>
-<span style="float:left"><a href="/">>> Home</a>
+<span style="float:left">
 {% for link in links %}
 <a href="http://django.hydra.to{{link.uri}}">>> {{link.text}}</a>
 {% endfor %}
