Changed header/body colorscheme, moved mse style.css to homedata statics and loaded it in main index, and removed credits from mse/views.py

--- a/homedata/static/homedata/login_bar.css
+++ b/homedata/static/homedata/login_bar.css
@@ -16,4 +16,6 @@ html, body {
   padding: 0px 0px 10px 0px;
 }
 
-header a:visited { color: #FF00FF }
+/*header a { color: #7777FF }*/
+header a { color: #FF3975 }
+header a:visited { color: #FF7539 }
