--- a/mse/templates/mse/details.html
+++ b/mse/templates/mse/details.html
@@ -2,7 +2,7 @@
 <head>
 {% load static %}
 <title>{{ requested_ticker }} details</title>
-<link rel="stylesheet" type="text/css" href="{% static 'mse/style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'homedata/style.css' %}">
 </head>
 {% include "loginbar/login_bar.html" %}
 <body>
