--- a/mse/templates/mse/chart.html
+++ b/mse/templates/mse/chart.html
@@ -5,7 +5,7 @@
 <!-- the charts need to be rendered to                             -->
 {% include 'loginbar/login_bar.html' %}
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'mse/style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'homedata/style.css' %}">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script src="http://code.highcharts.com/js/highcharts.js" type="text/javascript"></script>
 <link rel="stylesheet" href="{% static 'mse/highcharts.css' %}" type="text/css">
