Added register form and relevants css/url entries.

--- a/homedata/static/homedata/style.css
+++ b/homedata/static/homedata/style.css
@@ -5,3 +5,14 @@ td { /* mse details table */
 body {
   background-color: #999999
 }
+
+.registrationform form {
+  display: table;
+}
+.registrationform p {
+  display: table-row;
+}
+.registrationform label, .registrationform input {
+  display: table-cell;
+}
+
