--- a/mse/templates/mse/chart.html
+++ b/mse/templates/mse/chart.html
@@ -6,8 +6,8 @@
 {% include 'loginbar/login_bar.html' %}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'homedata/style.css' %}">
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-<script src="http://code.highcharts.com/js/highcharts.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<script src="https://code.highcharts.com/js/highcharts.js" type="text/javascript"></script>
 <link rel="stylesheet" href="{% static 'mse/highcharts.css' %}" type="text/css">
 {% load chartit %}
 {{ charts|load_charts:"high_low_close,trades_chart,change_chart,volume_chart" }}
