--- a/homedata/static/homedata/style.css
+++ b/homedata/static/homedata/style.css
@@ -15,4 +15,9 @@ body {
 .registrationform label, .registrationform input {
   display: table-cell;
 }
-
+#footer {
+   position:absolute;
+   bottom:0;
+   width:100%;
+   /*height:60px;   /* Height of the footer */
+}
