--- a/homedata/templates/homedata/index.html
+++ b/homedata/templates/homedata/index.html
@@ -7,7 +7,8 @@
 <body>
   <ul>
   {% for exchange in exch_list %}
-    <li><a href="{{ exchange.EXCH }}">{{ exchange.EXCH_FULL }}</a><br></li>
+    <li><a href="{{ exchange.exch }}">{{ exchange.exch_full }}</a><br></li>
   {% endfor %}
   </ul>
 </body>
+{% include "loginbar/footer.html" %}
