--- a/loginbar/templates/loginbar/footer.html
+++ b/loginbar/templates/loginbar/footer.html
@@ -1,8 +1,6 @@
-<div id="footer">
 <footer>
+<div id="footer">
 <span style="float:right;">
-<a href="http://www.beyondsecurity.com/vulnerability-scanner-verification/django.hydra.to"><img src="https://seal.beyondsecurity.com/verification-images/django.hydra.to/vulnerability-scanner-1.gif" alt="Website Security Test" border="0" /></a>
-</span>
+<a href="http://www.beyondsecurity.com/vulnerability-scanner-verification/django.hydra.to"><img src="https://seal.beyondsecurity.com/verification-images/django.hydra.to/vulnerability-scanner-1.gif" alt="Website Security Test" border="0" /></a></span></div>
 </footer>
-</div>
 
