--- a/homedata/static/homedata/style.css
+++ b/homedata/static/homedata/style.css
@@ -3,7 +3,9 @@ td { /* mse details table */
   padding: 0 10px 0 10px;
 }
 body {
-  background-color: #999999
+  background-color: #999999;
+  padding: 0;
+  margin: 0;
 }
 
 .registrationform form {
@@ -15,9 +17,16 @@ body {
 .registrationform label, .registrationform input {
   display: table-cell;
 }
-#footer {
+.site {
+  min-height: 100%;
+  position: relative;
+}
+.content {
+  padding-bottom: 35px;
+}
+.footer {
    position:absolute;
    bottom:0;
    width:100%;
-   /*height:60px;   /* Height of the footer */
+   height:35px;   /* Height of the footer */
 }
