Moved header out of head tag and added site/header/content/footer div classes for CSS.

--- a/investments/templates/investments/register.html
+++ b/investments/templates/investments/register.html
@@ -1,9 +1,13 @@
 <head>
-{% include 'loginbar/login_bar.html' %}
 <title>Register</title>
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'homedata/style.css' %}">
 </head>
+<div class="site">
+<div class="header">
+{% include 'loginbar/login_bar.html' %}
+</div>
+<div class="content">
 <body>
 <div class="registrationform">
 <form action="/register/" method="post" style="display: table;">
@@ -18,5 +22,9 @@
 </form>
 </div>
 </body>
+</div>
 {{requesty}}
+<div class="footer">
 {% include "loginbar/footer.html" %}
+</div>
+</div>
