--- a/mse/templates/mse/index.html
+++ b/mse/templates/mse/index.html
@@ -3,7 +3,11 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'homedata/style.css' %}">
 </head>
+<div class="site">
+<div class="header">
 {% include "loginbar/login_bar.html" %}
+</div>
+<div class="content">
 <body>
 {% if ticker_list %}
    <ul>
@@ -15,4 +19,8 @@
    <p>No trades found in database.</p>
 {% endif %}
 </body>
+</div>
+<div class="footer">
 {% include "loginbar/footer.html" %}
+</div>
+</div>
