--- a/portfolio/templates/portfolio/success.html
+++ b/portfolio/templates/portfolio/success.html
@@ -1,12 +1,20 @@
 <head>
 <title>Portfolio</title>
-{% include 'loginbar/login_bar.html' %}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'homedata/style.css' %}">
 </head>
+<div class="site">
+<div class="header">
+{% include 'loginbar/login_bar.html' %}
+</div>
+<div class="content">
 <body>
 {{message}}<br>
 <a href='/portfolio'>Return to portfolio list</a>
 </div>
 </body>
+</div>
+<div class="footer">
 {% include "loginbar/footer.html" %}
+</div>
+</div>
