--- a/homedata/templates/homedata/index.html
+++ b/homedata/templates/homedata/index.html
@@ -3,7 +3,11 @@
 <title>Providers</title>
 <link rel="stylesheet" type="text/css" href="{% static 'homedata/style.css' %}">
 </head>
+<div class="site">
+<div class="header">
 {% include "loginbar/login_bar.html" %}
+</div>
+<div class="content">
 <body>
   <ul>
   {% for exchange in exch_list %}
@@ -11,4 +15,8 @@
   {% endfor %}
   </ul>
 </body>
+</div>
+<div class="footer">
 {% include "loginbar/footer.html" %}
+</div>
+</div>
