--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -1,8 +1,12 @@
 <head>
-{% include 'loginbar/login_bar.html' %}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'homedata/style.css' %}">
 </head>
+<div class="site">
+<div class="header">
+{% include 'loginbar/login_bar.html' %}
+</div>
+<div class="content">
 <body>
 {% if user.is_authenticated %}
 You are logged in as {{user.username}}<br>
@@ -24,4 +28,8 @@ No portfolios found<br>
 {% endif %}
 <a href="add">Add</a> <a href="del">Delete</a>
 </body>
+</div>
+<div class="footer">
 {% include "loginbar/footer.html" %}
+</div>
+</div>
