--- a/portfolio/templates/portfolio/add.html
+++ b/portfolio/templates/portfolio/add.html
@@ -1,10 +1,6 @@
-<head>
-<title>Add Portfolio</title>
-{% include 'loginbar/login_bar.html' %}
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'homedata/style.css' %}">
-</head>
-<body>
+{% extends 'investments/base.html' %}
+{% block title %}Add Portfolio{% endblock %}
+{% block content %}
 <div class="addportfolioform">
 <form action="/portfolio/add_post/" method="post" style="display: table;">
 <p><label for="portfolio_name">Portfolio Name: </label><input type="text" name="portfolio_name" required></p>
@@ -12,5 +8,4 @@
 {% csrf_token %}
 </form>
 </div>
-</body>
-{% include "loginbar/footer.html" %}
+{% endblock %}
