--- a/homedata/static/homedata/style.css
+++ b/homedata/static/homedata/style.css
@@ -30,3 +30,40 @@ body {
    width:100%;
    height:35px;   /* Height of the footer */
 }
+
+/* View Portfolio table */
+#portfolio_view_table ul {
+   list-style-position:inside;
+}
+#portfolio_view_table #add_portfolio_data {
+   display: inline;
+}
+#add_portfolio_data form {
+   display: table;
+}
+td.security-label, td.security-value {
+   text-align: left;
+   white-space: nowrap;
+}
+td.security-label {
+   width: 93;
+}
+td.security-value {
+   width: 135;
+}
+td.quantity-sum, td.breakdown-col2 {
+   text-align: right;
+}
+table.data-breakdown, table.header-table {
+   border: 1px;
+   border-spacing: 0;
+}
+td.breakdown-col1 {
+   min-width: 150;
+   text-align: right;
+   white-space: nowrap;
+}
+/*Jquery*/
+.ui-state-focus{
+    outline: none;
+}
