--- a/portfolio/templates/portfolio/view.html
+++ b/portfolio/templates/portfolio/view.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% load static %}
 <script src="{% static 'homedata/jquery-3.2.0.min.js' %}" type="text/javascript"></script>
-<script src="{% static 'homedata/jquery-ui-1.12.1.custom/jquery-ui.js' %}" type="text/javascript"></script>
+<script src="{% static 'homedata/jquery-ui.js' %}" type="text/javascript"></script>
 Viewing portfolio {{portfolio_id}}<br>
 <div id="portfolio_view_table">
 {% for holding,summary,breakdown in data %}
